--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint . --ignore-pattern \"eslint.config.mjs\"",
+    "format": "npx prettier . --write",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,16 @@
     ]
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.13"
+    "@eslint/js": "^9.10.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.2",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.5.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{tsx,ts,js,css,md}": "prettier --write"
   }
 }
