Create footer, put links to github/npm package/license in footer, break apart divider into it’s own reusable component, update readme, and update linter script to only lint /src directory

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint . --ignore-pattern \"eslint.config.mjs\"",
+    "lint": "npx eslint src/ --ignore-pattern \"eslint.config.mjs\"",
     "format": "npx prettier . --write",
     "prepare": "husky install",
     "predeploy": "npm run build",
