--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.35.2",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.5.0"
   },
