add stylelint, add rules, lint all css files, create script in package.json, add to husky precommit hook, and update readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "cSpell.words": [
     "predeploy",
-    "tseslint"
-  ]
+    "stylelint",
+    "tseslint",
+    "unspaced"
+  ],
+  "stylelint.config": null,
 }
